# pocketcoder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dev_flow.md  pocketflow.md  pyproject.toml  pytest.ini  requirements.txt  run.py  sprint_1.md
specs/: day1_spec1_testing_framework.md  day1_spec2_utility_testing.md  day1_spec3_history_formatter.md  day2_spec1_node_base_classes.md  day2_spec2_base_class_testing.md  day2_spec3_prompt_templates.md
src/: __init__.py  flow.py  main.py
src/utils/: call_llm.py  delete_file.py  dir_ops.py  insert_file.py  read_file.py  remove_file.py  replace_file.py  search_ops.py
tests/: conftest.py  test_history_formatter.py  test_smoke.py
tests/fixtures/mock_responses/: llm_responses.yaml
tests/fixtures/sample_files/: config.yaml  test_file.py
tests/test_utils/: test_call_llm.py  test_delete_file.py  test_dir_ops.py  test_file_operations.py  test_read_file.py  test_search_ops.py
