[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketcoder"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest"
test-cov = "pytest --cov=src"
lint = "flake8 src/"
format = "black src/"
format-check = "black --check src/"
dev = "python -m pocketcoder"
