[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketcoder"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "taskipy>=1.14.1",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,W503"

[tool.taskipy.tasks]
test = "pytest"
test-cov = "pytest --cov=src"
lint = "flake8 --max-line-length=120 --extend-ignore=E203,E266,E501,W503,W504 src/"
format = "black --line-length=120 src/"
format-check = "black --check src/"
dev = "python run.py"
